src/main/gen/com/itsert/core/scriptengine/grammar/ITDLParser.java
// Generated from /Users/opefago/Documents/projects/itsert/src/main/kotlin/com/itsert/core/scriptengine/grammar/ITDL.g4 by ANTLR 4.8
package com.itsert.core.scriptengine.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ITDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, INT=12, NUMBER=13, IS=14, IF=15, IN=16, TO=17, AS=18, 
		AT=19, FOR=20, VAR=21, GIVEN=22, PRINT=23, DEPENDS=24, GREATER=25, THAN=26, 
		OR=27, EQUALS=28, ELSE=29, ON=30, AND=31, ASSERT=32, FUNCTION=33, WHILE=34, 
		TEST=35, CASE=36, SCENERIO=37, RETURNED=38, SERVICES=39, CONSTANT=40, 
		END=41, TRUE=42, FALSE=43, SETUP=44, TEARDOWN=45, RETURN=46, BOOL=47, 
		ALPHA=48, STRING=49, DOT=50, L_PAREN=51, R_PAREN=52, L_CURLY=53, R_CURLY=54, 
		L_SQUARE=55, R_SQUARE=56, ASSIGN=57, COMMA=58, ELLIPSIS=59, SEMI=60, ADD=61, 
		SUB=62, DIV=63, MULT=64, NEWLINE=65, WS=66, LINE_COMMENT=67, BLOCK_COMMENT=68, 
		Id=69;
	public static final int
		RULE_script = 0, RULE_statement = 1, RULE_exprStatement = 2, RULE_block = 3, 
		RULE_returnStmt = 4, RULE_dependencesDclrExpr = 5, RULE_stringList = 6, 
		RULE_varDeclare = 7, RULE_subDeclare = 8, RULE_dependencesOptions = 9, 
		RULE_functionCall = 10, RULE_functionCallParameters = 11, RULE_functionDclrExpr = 12, 
		RULE_formalParamters = 13, RULE_testDclrExpr = 14, RULE_setupStmt = 15, 
		RULE_tearDownStmt = 16, RULE_assertionExpr = 17, RULE_conditionalExpr = 18, 
		RULE_whileStatement = 19, RULE_forStatement = 20, RULE_elseCondition = 21, 
		RULE_thenStatement = 22, RULE_elseStatement = 23, RULE_expr = 24, RULE_rangeExpr = 25, 
		RULE_list = 26, RULE_value = 27, RULE_bool = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "statement", "exprStatement", "block", "returnStmt", "dependencesDclrExpr", 
			"stringList", "varDeclare", "subDeclare", "dependencesOptions", "functionCall", 
			"functionCallParameters", "functionDclrExpr", "formalParamters", "testDclrExpr", 
			"setupStmt", "tearDownStmt", "assertionExpr", "conditionalExpr", "whileStatement", 
			"forStatement", "elseCondition", "thenStatement", "elseStatement", "expr", 
			"rangeExpr", "list", "value", "bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'>'", "'>='", "'<'", "'<='", "'equals'", "'!equals'", "'and'", 
			"'or'", "'not'", "'!'", null, null, "'is'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'.'", "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "'='", "','", "'..'", "';'", "'+'", "'-'", "'/'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"INT", "NUMBER", "IS", "IF", "IN", "TO", "AS", "AT", "FOR", "VAR", "GIVEN", 
			"PRINT", "DEPENDS", "GREATER", "THAN", "OR", "EQUALS", "ELSE", "ON", 
			"AND", "ASSERT", "FUNCTION", "WHILE", "TEST", "CASE", "SCENERIO", "RETURNED", 
			"SERVICES", "CONSTANT", "END", "TRUE", "FALSE", "SETUP", "TEARDOWN", 
			"RETURN", "BOOL", "ALPHA", "STRING", "DOT", "L_PAREN", "R_PAREN", "L_CURLY", 
			"R_CURLY", "L_SQUARE", "R_SQUARE", "ASSIGN", "COMMA", "ELLIPSIS", "SEMI", 
			"ADD", "SUB", "DIV", "MULT", "NEWLINE", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
			"Id"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ITDL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ITDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ITDLParser.EOF, 0); }
		public List<DependencesDclrExprContext> dependencesDclrExpr() {
			return getRuleContexts(DependencesDclrExprContext.class);
		}
		public DependencesDclrExprContext dependencesDclrExpr(int i) {
			return getRuleContext(DependencesDclrExprContext.class,i);
		}
		public SetupStmtContext setupStmt() {
			return getRuleContext(SetupStmtContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TearDownStmtContext tearDownStmt() {
			return getRuleContext(TearDownStmtContext.class,0);
		}
		public List<TerminalNode> SEMI() { return getTokens(ITDLParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(ITDLParser.SEMI, i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				dependencesDclrExpr();
				setState(60);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(59);
					match(SEMI);
					}
					break;
				}
				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEPENDS );
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SETUP) {
				{
				setState(66);
				setupStmt();
				}
			}

			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & ((1L << (T__9 - 10)) | (1L << (T__10 - 10)) | (1L << (INT - 10)) | (1L << (NUMBER - 10)) | (1L << (IF - 10)) | (1L << (FOR - 10)) | (1L << (VAR - 10)) | (1L << (PRINT - 10)) | (1L << (ASSERT - 10)) | (1L << (FUNCTION - 10)) | (1L << (WHILE - 10)) | (1L << (TEST - 10)) | (1L << (SCENERIO - 10)) | (1L << (TRUE - 10)) | (1L << (FALSE - 10)) | (1L << (RETURN - 10)) | (1L << (STRING - 10)) | (1L << (L_PAREN - 10)) | (1L << (L_CURLY - 10)) | (1L << (L_SQUARE - 10)) | (1L << (SEMI - 10)) | (1L << (Id - 10)))) != 0)) {
				{
				{
				setState(69);
				statement();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TEARDOWN) {
				{
				setState(75);
				tearDownStmt();
				}
			}

			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtBlockContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StmtBlockContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtAssertContext extends StatementContext {
		public AssertionExprContext assertionExpr() {
			return getRuleContext(AssertionExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ITDLParser.SEMI, 0); }
		public StmtAssertContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtAssert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtAssert(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtAssert(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtWhileContext extends StatementContext {
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public StmtWhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtExprContext extends StatementContext {
		public ExprStatementContext exprStatement() {
			return getRuleContext(ExprStatementContext.class,0);
		}
		public StmtExprContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtCondtionalContext extends StatementContext {
		public ConditionalExprContext conditionalExpr() {
			return getRuleContext(ConditionalExprContext.class,0);
		}
		public StmtCondtionalContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtCondtional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtCondtional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtCondtional(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtSemiContext extends StatementContext {
		public TerminalNode SEMI() { return getToken(ITDLParser.SEMI, 0); }
		public StmtSemiContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtSemi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtSemi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtSemi(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtTestDclContext extends StatementContext {
		public TestDclrExprContext testDclrExpr() {
			return getRuleContext(TestDclrExprContext.class,0);
		}
		public StmtTestDclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtTestDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtTestDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtTestDcl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtForContext extends StatementContext {
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public StmtForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtFor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtAssignContext extends StatementContext {
		public VarDeclareContext varDeclare() {
			return getRuleContext(VarDeclareContext.class,0);
		}
		public StmtAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintExprContext extends StatementContext {
		public TerminalNode PRINT() { return getToken(ITDLParser.PRINT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ITDLParser.SEMI, 0); }
		public PrintExprContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterPrintExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitPrintExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitPrintExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtFunDclContext extends StatementContext {
		public FunctionDclrExprContext functionDclrExpr() {
			return getRuleContext(FunctionDclrExprContext.class,0);
		}
		public StmtFunDclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterStmtFunDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitStmtFunDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitStmtFunDcl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStContext extends StatementContext {
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public ReturnStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterReturnSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitReturnSt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitReturnSt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSERT:
				_localctx = new StmtAssertContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				assertionExpr();
				setState(81);
				match(SEMI);
				}
				break;
			case TEST:
			case SCENERIO:
				_localctx = new StmtTestDclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				testDclrExpr();
				}
				break;
			case VAR:
				_localctx = new StmtAssignContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				varDeclare();
				}
				break;
			case SEMI:
				_localctx = new StmtSemiContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				match(SEMI);
				}
				break;
			case IF:
				_localctx = new StmtCondtionalContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				conditionalExpr();
				}
				break;
			case L_CURLY:
				_localctx = new StmtBlockContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				block();
				}
				break;
			case PRINT:
				_localctx = new PrintExprContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(88);
				match(PRINT);
				setState(89);
				expr(0);
				setState(90);
				match(SEMI);
				}
				break;
			case FUNCTION:
				_localctx = new StmtFunDclContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(92);
				functionDclrExpr();
				}
				break;
			case FOR:
				_localctx = new StmtForContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(93);
				forStatement();
				}
				break;
			case WHILE:
				_localctx = new StmtWhileContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(94);
				whileStatement();
				}
				break;
			case RETURN:
				_localctx = new ReturnStContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(95);
				returnStmt();
				}
				break;
			case T__9:
			case T__10:
			case INT:
			case NUMBER:
			case TRUE:
			case FALSE:
			case STRING:
			case L_PAREN:
			case L_SQUARE:
			case Id:
				_localctx = new StmtExprContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(96);
				exprStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprStatementContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ITDLParser.SEMI, 0); }
		public ExprStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterExprStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitExprStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitExprStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprStatementContext exprStatement() throws RecognitionException {
		ExprStatementContext _localctx = new ExprStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exprStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			expr(0);
			setState(100);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode L_CURLY() { return getToken(ITDLParser.L_CURLY, 0); }
		public TerminalNode R_CURLY() { return getToken(ITDLParser.R_CURLY, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ITDLListener ) ((ITDLListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ITDLVisitor ) return ((ITDLVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(L_CURLY);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & ((1L << (T__9 - 10)) | (1L << (T__10 - 10)) | (1L << (INT - 10)) | (1L << (NUMBER - 10)) | (1L << (IF - 10)) | (1L << (FOR - 10)) | (1L << (VAR - 10)) | (1L << (PRINT - 10)) | (1L << (ASSERT - 10)) | (1L << (FUNCTION - 10)) | (1L << (WHILE - 10)) | (1L << (TEST - 10)) | (1L << (SCENERIO - 10)) | (1L << (TRUE - 10)) | (1L << (FALSE - 10)) | (1L << (RETURN - 10)) | (1L << (STRING - 10)) | (1L << (L_PAREN - 10)) | (1L << (L_CURLY - 10)) | (1L << (L_SQUARE - 10)) | (1L << (SEMI - 10)) | (1L << (Id - 10)))) != 0)) {
				{
				{
				setState(103);
				statement();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(R_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
